debug slack message title link
Signed-off-by: Carlos Chen <carlos.chen@thirdbridge.com>

--- a/lambda_sns_to_slack/Makefile
+++ b/lambda_sns_to_slack/Makefile
@@ -16,6 +16,9 @@ fmt:
 lint: fmt
 	cargo clippy --all-targets --all-features -- -D warnings
 
+test:
+	cargo test --all-features --all-targets
+
 upgrade:
 	cargo outdated
 	cargo upgrade
