--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,7 +171,6 @@ commands:
             rustup target add aarch64-unknown-linux-musl
             rm -f target/lambda/lambda_sns_to_slack/bootstrap target/lambda/lambda_sns_to_slack/bootstrap.zip
             cargo lambda build --target aarch64-unknown-linux-musl --release
-            cargo lambda build --target aarch64-unknown-linux-musl --release --output-format zip
             ls -sl target/lambda/lambda_sns_to_slack/
 
       - run:
@@ -195,7 +194,7 @@ commands:
           command: |
             cd lambda_sns_to_slack/target/lambda/lambda_sns_to_slack/
             upx --best ./bootstrap
-            zip --update ./bootstrap.zip ./bootstrap
+            zip -j ./bootstrap.zip ./bootstrap
             ls -sl
 
       - aws-cli/setup:
