SPEC-622 Fix slack message link (#12)
* cache rustup

Signed-off-by: Carlos Chen <carlos.chen@thirdbridge.com>

* cache rustup

Signed-off-by: Carlos Chen <carlos.chen@thirdbridge.com>

* workarond trend based alarms has no threshold

Signed-off-by: Carlos Chen <carlos.chen@thirdbridge.com>

* debug slack message title link

Signed-off-by: Carlos Chen <carlos.chen@thirdbridge.com>

* debug slack message title link

Signed-off-by: Carlos Chen <carlos.chen@thirdbridge.com>

* zip -j

Signed-off-by: Carlos Chen <carlos.chen@thirdbridge.com>

* keep scientific notation

Signed-off-by: Carlos Chen <carlos.chen@thirdbridge.com>

* keep scientific notation

Signed-off-by: Carlos Chen <carlos.chen@thirdbridge.com>

* Add Cargo.lock checksum in cache key

Signed-off-by: Carlos Chen <carlos.chen@thirdbridge.com>

---------

Signed-off-by: Carlos Chen <carlos.chen@thirdbridge.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,7 +171,6 @@ commands:
             rustup target add aarch64-unknown-linux-musl
             rm -f target/lambda/lambda_sns_to_slack/bootstrap target/lambda/lambda_sns_to_slack/bootstrap.zip
             cargo lambda build --target aarch64-unknown-linux-musl --release
-            cargo lambda build --target aarch64-unknown-linux-musl --release --output-format zip
             ls -sl target/lambda/lambda_sns_to_slack/
 
       - run:
@@ -195,7 +194,7 @@ commands:
           command: |
             cd lambda_sns_to_slack/target/lambda/lambda_sns_to_slack/
             upx --best ./bootstrap
-            zip --update ./bootstrap.zip ./bootstrap
+            zip -j ./bootstrap.zip ./bootstrap
             ls -sl
 
       - aws-cli/setup:
@@ -249,7 +248,7 @@ commands:
 
       - save_cache:
           name: Save Cargo Cache
-          key: v1-cargo-cache-{{ checksum "CACHED_VERSIONS.txt" }}
+          key: v1-cargo-cache-{{ checksum "lambda_sns_to_slack/Cargo.lock" }}-{{ checksum "CACHED_VERSIONS.txt" }}
           paths:
             - /home/circleci/.local/bin/ # upx binary
             - /home/circleci/.cargo/
